src/objects/Misura__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maglieria</fullName>
                </value>
                <value>
                    <fullName>Capospalla</fullName>
                </value>
                <value>
                    <fullName>Giacche</fullName>
                </value>
                <value>
                    <fullName>Topwear</fullName>
                </value>
                <value>
                    <fullName>Abiti</fullName>
                </value>
                <value>
                    <fullName>Camicie</fullName>
                </value>
                <value>
                    <fullName>Pantaloni</fullName>
                </value>
                <value>
                    <fullName>Gonne</fullName>
                </value>
                <value>
                    <fullName>Calzature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cavallo_pantaloni__c</fullName>
        <label>Cavallo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cavallo_pantaloni_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Cavallo_pantaloni__c*0.393701, Cavallo_pantaloni__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cavallo (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_petto_camicia__c</fullName>
        <label>Circonferenza petto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_petto_camicia_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Circonferenza_petto_camicia__c*0.393701, Circonferenza_petto_camicia__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Circonferenza petto (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_pantaloni__c</fullName>
        <label>Circonferenza vita</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circonferenza_vita_pantaloni_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Circonferenza_vita_pantaloni__c*0.393701, Circonferenza_vita_pantaloni__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Circonferenza vita (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Misure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collo_allacciato_camicia__c</fullName>
        <label>Collo allacciato</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collo_allacciato_camicia_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Collo_allacciato_camicia__c*0.393701, Collo_allacciato_camicia__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collo allacciato (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Inserimento__c</fullName>
        <formula>DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Inserimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fondo_pantaloni__c</fullName>
        <label>Fondo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fondo_pantaloni_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Fondo_pantaloni__c*0.393701, Fondo_pantaloni__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fondo (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_esterno_gamba_pantaloni_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Lunghezza_esterno_gamba_pantaloni__c*0.393701, Lunghezza_esterno_gamba_pantaloni__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza esterno gamba (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_interno_gamba_pantaloni_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Lunghezza_interno_gamba_pantaloni__c*0.393701, Lunghezza_interno_gamba_pantaloni__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza interno gamba (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lungh_manica_da_c_scollo_giacca_convert__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Lunghezza_manica_da_c_scollo_giacca__c*0.393701, Lunghezza_manica_da_c_scollo_giacca__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lungh. manica da c. scollo (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_da_p_spalla_camicia__c</fullName>
        <label>Lunghezza da p. spalla</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_da_p_spalla_camicia_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Lunghezza_da_p_spalla_camicia__c*0.393701, Lunghezza_da_p_spalla_camicia__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza da p. spalla (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_dietro_giacca__c</fullName>
        <label>Lunghezza dietro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_dietro_giacca_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Lunghezza_dietro_giacca__c*0.393701, Lunghezza_dietro_giacca__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza dietro (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_esterno_gamba_pantaloni__c</fullName>
        <label>Lunghezza esterno gamba</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_interno_gamba_pantaloni__c</fullName>
        <label>Lunghezza interno gamba</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_manica_camicia__c</fullName>
        <label>Lunghezza manica</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_manica_camicia_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Lunghezza_manica_camicia__c*0.393701, Lunghezza_manica_camicia__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza manica (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunghezza_manica_da_c_scollo_giacca__c</fullName>
        <label>Lunghezza manica da c. scollo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spalla_camicia__c</fullName>
        <label>Spalla</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spalla_camicia_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), Spalla_camicia__c*0.393701, Spalla_camicia__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spalla (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taglia__c</fullName>
        <label>Taglia</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Categoria__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XS</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
                <value>
                    <fullName>XXXL</fullName>
                </value>
                <value>
                    <fullName>35.0</fullName>
                </value>
                <value>
                    <fullName>35.5</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>36.0</fullName>
                </value>
                <value>
                    <fullName>36.5</fullName>
                </value>
                <value>
                    <fullName>37.0</fullName>
                </value>
                <value>
                    <fullName>37.5</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>38.0</fullName>
                </value>
                <value>
                    <fullName>38.5</fullName>
                </value>
                <value>
                    <fullName>39.0</fullName>
                </value>
                <value>
                    <fullName>39.5</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>40.0</fullName>
                </value>
                <value>
                    <fullName>40.5</fullName>
                </value>
                <value>
                    <fullName>41.0</fullName>
                </value>
                <value>
                    <fullName>41.5</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>42.0</fullName>
                </value>
                <value>
                    <fullName>42.5</fullName>
                </value>
                <value>
                    <fullName>43.0</fullName>
                </value>
                <value>
                    <fullName>43.5</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipologia__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipologia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_di_misura__c</fullName>
        <label>Unità di misura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>inches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_di_misura_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), &quot;inches&quot;, &quot;cm&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unità di misura (convertita)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mezza_spalla_giacca__c</fullName>
        <label>½ spalla</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mezza_spalla_giacca_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), mezza_spalla_giacca__c*0.393701, mezza_spalla_giacca__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>½ spalla (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mezza_vita_camicia__c</fullName>
        <label>½ vita</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mezza_vita_camicia_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), mezza_vita_camicia__c*0.393701, mezza_vita_camicia__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>½ vita (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mezza_vita_giacca__c</fullName>
        <label>½ vita</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mezza_vita_giacca_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), mezza_vita_giacca__c*0.393701, mezza_vita_giacca__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>½ vita (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mezzo_torace_giacca__c</fullName>
        <label>½ torace</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mezzo_torace_giacca_convertita__c</fullName>
        <formula>IF (ISPICKVAL(Unit_di_misura__c, &quot;cm&quot;), mezzo_torace_giacca__c*0.393701, mezzo_torace_giacca__c*2.54)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>½ torace (convertita)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Servizio sartoriale</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>Servizio sartoriale</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Servizi sartoriali</pluralLabel>
    <recordTypes>
        <fullName>Misura_Sartoriale</fullName>
        <active>true</active>
        <label>Misura Sartoriale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taglia_Donna</fullName>
        <active>true</active>
        <label>Taglia - Donna</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taglia_Uomo</fullName>
        <active>true</active>
        <label>Taglia - Uomo</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>